<resources>
    <string name="app_name">SMS Forward</string>
    <string name="action_edit_props">JavaMail Properties</string>
    <string name="hint_email">Email address*</string>
    <string name="hint_password">Password*</string>
    <string name="hint_server">SMTP Server*</string>
    <string name="hint_port">Port*</string>
    <string name="hint_target">Target address*</string>
    <string name="hint_pubkey">Public PGP key</string>
    <string name="intro">Here you can set up the email account to be used for sending SMS contents.\nThe button starts the receiver that catches and forwards SMS via email.\nIf you\'ve changed settings along the way, a test mail will be sent and you\'ll be asked to confirm its receipt to really start the receiver.</string>
    <string name="service_notification_ticker">Forwarding SMS via Email</string>
    <string name="snackbar_settings_changed">Confirm that you\'ve received the test mail</string>
    <string name="snackbar_settings_confirmed">Confirm</string>
    <string name="email_body_template" formatted="false">SMS from %s:%n%n%s</string>
    <string name="email_subject_template" formatted="false">%d new SMS</string>
    <string name="email_subject_test">SMS Forward Test Mail</string>
    <string name="email_body_test">If you see this mail, your settings are set correctly and your SMS should be forwarded properly to this mail address once you\'ve confirmed the receipt of this mail on your device.</string>
    <string name="invalid_email">Not a valid email address</string>
    <string name="invalid_password">No password stored or set here</string>
    <string name="invalid_server">Not a valid fully qualified domain name</string>
    <string name="invalid_port">Not a valid port</string>
    <string name="invalid_pubkey">Not a valid PGP pubkey</string>
    <string name="invalid_something">Not a valid input</string>
    <string name="hint_intro0">Tap to expand explanation</string>
    <string name="hint_intro1">Tap to collapse explanation</string>
    <string-array name="javamail_default_property_keys">
        <item>mail.transport.protocol</item>
        <item>mail.smtp.auth</item>
        <item>mail.smtp.starttls.enable</item>
        <item>mail.smtp.socketFactory.port</item>
        <item>mail.smtp.socketFactory.class</item>
        <item>mail.smtp.host</item>
        <item>mail.smtp.port</item>
        <item>mail.smtp.socketFactory.fallback</item>
        <item>mail.smtp.quitwait</item>
    </string-array>
    <string-array name="javamail_default_property_values">
        <item>smtp</item>
        <item>true</item>
        <item>true</item>
        <item>$PORT</item>
        <item>javax.net.ssl.SSLSocketFactory</item>
        <item>$SERVER</item>
        <item>$PORT</item>
        <item>false</item>
        <item>false</item>
    </string-array>
    <string name="title_activity_javamail_properties">JavaMail Properties</string>
    <string name="hint_javamail_properties_key">Key</string>
    <string name="hint_javamail_properties_value">Value</string>
    <string name="action_reset_props">Reset properties</string>
    <string name="title_dialog_add_javamail_property">Add new JavaMail property</string>
    <string name="positive_dialog_add_javamail_property">OK</string>
    <string name="negative_dialog_add_javamail_property">Delete</string>
    <string name="neutral_dialog_add_javamail_property">Cancel</string>
    <string name="title_dialog_edit_javamail_property">Edit JavaMail property</string>
    <string name="snackbar_property_revert">Revert</string>
    <string name="snackbar_property_added">Added property \"%s\"</string>
    <string name="snackbar_property_edited">Changed property \"%s\"</string>
    <string name="snackbar_property_removed">Removed property \"%s\"</string>
    <string name="snackbar_property_reset">Reset properties to default</string>
    <string name="invalid_javamail_key">Invalid JavaMail property key</string>
    <string name="invalid_javamail_value">Empty property value</string>
    <string name="positive_dialog_hint_javamail_property">Got it!</string>
    <string name="message_dialog_hint_javamail_property">Here you can edit the set of Properties that will be passed to the JavaMail instance used for sending emails.\nTap a key-value pair to make changes, swipe one to remove it or add one by tapping the + button.\nYou can access the following settings from the main setup as values: $EMAIL (account email address), $SERVER (host name), $PORT (SMTP port), $TARGET (target email address).\nRead more about the key-value-pairs used here at https://javamail.java.net/nonav/docs/api/com/sun/mail/smtp/package-summary.html</string>
    <string name="title_dialog_hint_javamail_property">What are you doing here?</string>
    <string name="action_hint_props">Info</string>
    <string name="toast_hint_javamail_property">HERE BE DRAGONS! Please tap the info button to get an idea of what you\'re supposed to do here.</string>
    <string-array name="pubkey_dialog_list">
        <item>Paste public key</item>
        <item>Clear public key</item>
    </string-array>
    <string name="play_path">M24.0,48.0 L24.0,0.0 L84.0,42.0 L96.0,48.0 Z M24.0,48.0 L24.0,96.0 L84.0,54.0 L96.0,48.0 Z</string>
    <string name="pause_path">M0.0,32.0 L0.0,8.0 L96.0,8.0 L96.0,32.0 Z M0.0,64.0 L0.0,88.0 L96.0,88.0 L96.0,64.0 Z</string>
    <string name="button_permission">Okay</string>
    <string name="title_permission">Missing SMS Permission</string>
    <string name="message_permission">It seems like you haven\'t granted SMS Forward the permission to access your SMS. If you\'re seeing this pop-up repeatedly without being offered to grant a permission, you may have chosen the \"Never ask again\" option or manually revoked the permission. If so, you\'ll have to go to Android\'s App Settings, look for SMS Forward and flip the permission switch to use this app.</string>
</resources>
